[project]
name = "tsp"
version = "0.1.0"
description = "Data-driven Mutual Information Estimator based on regularized tree-structured partitions."
authors = [{ name = "Maximiliano Rojas", email = "maximiliano.rojas.1@ug.uchile.cl" }]

requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.1",
    "numba>=0.61.0",
    "scipy>=1.15.2",
    "tqdm>=4.67.1",
]

readme = "README.md"
license = { file = "LICENSE" }


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["TSP"]
